# AnAnnotator

./: CMakeLists.txt  FindICU.cmake  Makefile  README.md  README.txt  main.cpp
UimaAnnotator/: FAnnotator.cpp  FAnnotator.h
