cmake_minimum_required(VERSION 3.2)
project(F-measure)
set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
include_directories($ENV{UIMACPP_HOME}/include)
include_directories(/usr/local/opt/icu4c/include)
include_directories(/usr/include/apr-1)
include_directories(/usr/local/include)
link_directories(/usr/local/lib)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -lm -L/usr/local/opt/icu4c//lib -licui18n -licuuc -licuio -licudata")
find_library(UIMA uima HINTS $ENV{UIMACPP_HOME}/lib)
LINK_DIRECTORIES(/usr/local/opt/icu4c/lib)
set(SOURCE_FILES main.cpp)
add_executable(Progr ${SOURCE_FILES})
target_link_libraries(Progr ${UIMA})

#set(SOURCE_FILES UimaAnnotator/FAnnotator.h UimaAnnotator/FAnnotator.cpp)
#add_library(FAnnotator SHARED ${SOURCE_FILES})
#set_target_properties(FAnnotator PROPERTIES PREFIX "")
#target_link_libraries(FAnnotator ${UIMA})
